1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Pixmap.m ([Pixmap -setRaster:]): Move to Setting phase.

	* win32dib.c (dib_copy): Don't update DIB color table.

	* internal.m (tkobjc_pixmap_update_raster): Remove raster palette
	update code.

	* Pixmap.m ([Pixmap -_loadPNG_:]): Remove num_palette and palette
	local variables (use ivars).
	([Pixmap -_loadPNG_:]): Simplified usage of tkobjc_pixmap_create.
	([Pixmap -setRaster:]): Call new tkobjc_pixmap_update_raster.

	* Pixmap.h (Pixmap): Add palette_size and palette ivars.

	* internal.[hm] (tkobjc_pixmap_create): Drop palette and palette_size
	arguments.  New function tkobjc_pixmap_update_raster.

1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* WindowGeometryRecord.m: Include global.h.

	* Pixmap.h: Don't declare PixmapError here.

	* WindowGeometryRecord.h: Don't declare WindowGeometryRecordError here.

	* global.h: Declare PixmapError and WindowGeomtryRecordError here.

	* analysis.tcl: Declare hideOption, hideYes, and hideNo as globals.
	Use throughout for -hide/-mapped.

	* Histogram.m ([Histogram -hideLegend],
	[Histogram -setupActiveOutlierMarker]): Use hide{Option,Yes,No}.

	* tkobjc.m (initTkObjc): Define globals hideOption, hideYes, and 
	hideNo per newBLTp.  Don't include Pixmap.h or WindowGeometryRecord.h.

1998-08-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_initTclInterp, tkobjc_initTkInterp): 
	Set argc to 1.  (We use our own CLI argument processing.)

1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Pixmap.m ([Pixmap -_loadPNG_:]): Initialize row_bytes to zero.
	Return self.

	* internal.m (tkobjc_pixmap_create_from_widget): Add <Widget>
	qualifier to argument.

	* internal.h (tkobjc_pixmap_create_from_widget): Declare.

1998-08-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (INCLUDES): Use $(srcdir)/../tclobjc instead of
	$(tclobjcincludedir).

1998-08-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
